# Lusifer

./: .env  Embeddings.py  Lusifer.py  README.md  eval.py  evaluation.ipynb  evaluation_result.csv  movielens100K_example.py  movielens1m_example.py  pyproject.toml  rating_test_df_test.csv  rating_test_df_test.pkl  requirements.txt
Baseline/: ALS.py  Recommender.py  Recommender_ALS.py  TestItemIntersection.py  TestUserIntersection.py  run.py
Baseline/Librecommender_baseline/: baselines.py  testset_df_100k.csv
Evaluation/: evaluation.py
Evaluation/final_results/: evaluation_results_100K_cold_10.csv  evaluation_results_100k.csv  evaluation_results_1m.csv  evaluation_results_1m_cold_14.csv
Knowledge/: Sample prompt.docx  Sample_input.json  Sample_output.json  Sample_recommendation.json  Sample_summary.md
Playground/: Predicting_ratings_openai_API.ipynb  average_user_ratings_in_test_set.ipynb  evaluating_the_result.ipynb  movielens100K_rating_prediction.py  preprocessing_movielens100k.ipynb  preprocessing_movielens1m.ipynb  validating_splittings.ipynb
Playground/Data/: rating_test_df - Copy.csv  rating_test_df.pkl  rating_test_df_u1.csv  rating_test_df_u2.csv  rating_test_df_u3.pkl  rating_test_df_u4.csv  rating_test_df_u4.pkl  user_dataset_with_summaries.pkl  users_with_summary_df - Copy.csv  users_with_summary_df.pkl
Playground/sample_inputs/: prompt_for_analysis.md  (+2 more)
RL_env/: movielens_env.py
local_llm/: LocalLM.py
outputs/: rating_test_df_100k.csv  rating_test_df_100k_local.csv  rating_test_df_1m.csv  rating_test_df_1m_local.csv
utils/: llm.py
(+13 files in other folders)
